# yolotargetrec

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  _lib.sh  docker-compose.yml  pyproject.toml  restart.sh  run.sh  stop.sh  update.sh
.github/workflows/: ci.yml
backend/: app.py  config.py  requirements.txt  tracker.py  utils.py  yolo.py
frontend/: app.js  index.html  style.css
tests/: test_config.py  test_detector_slots.py  test_tracker.py
